 - add the possibility to use "fake" language in the "map.feature()" function.
 - lingtypology take into account leaflet 2.0.0 updates
 - add possibility to use combination of shape and label arguments
 - the base layer of the mini-map is the same as the base layer of the main map
 - add the "label.font" argument to the "map.feature()" function
 - update a "circassian" database
 - add the "valpal.feature()" function

lingtypology 1.0.12 (09.03.2018)
 - add the "pipe.data" argument to the "map.feature()" function (Thanks  @nikopartanen for the idea).
 - repair the "afbo.feature()" function.
 - add a message with citation information to all "...feature" function (Thanks  @nikopartanen for the idea).
 - add the "atlas.database()" function for creating atlases with rmarkdown.
 - add the "isogloss" argument to the "map.feture()" function for creating multiple isoglosses.
 - correct Even coordinates,
 - correct "is.glottolog()" function.

lingtypology 1.0.11 (15.01.2018)
 - add "shape" arguments.
 - argument "label.only" is deprecated.

lingtypology 1.0.10 (15.12.2017)
 - add the argument "line.type", that could be used for creating the decision boundary of the logistic regression on the map.
 - add arguments "line.opacity", "line.label", "line.width".
 - add the argument "graticule" to function map.feature().
 - add argument "label.only" to function map.feature().

lingtypology 1.0.9 (30.11.2017)
 - correct queries of the length one for wals.feature() and afbo.feature() functions. #22
 - add arguments for line ("line.lng", "line.lat", "line.color").

lingtypology 1.0.8 (07.10.2017)
 - add argument "density.control" to function map.feature().
 - add argument "label.emphasize" to function map.feature().
 - add arguments "minichart", "minichart.data", "minichart.labels" and "minichart.time" to function map.feature().
 - coloring scheme is changed.
 - argument "radius" renamed to "width".

lingtypology 1.0.7 (15.09.2017)