@@ -20,6 +20,7 @@ export(lang.iso)
 export(lat.lang)
 export(long.lang)
 export(map.feature)
+export(oto_mangueanIC.feature)
 export(phoible.feature)
 export(sails.feature)
 export(url.lang)
