@@ -1,0 +1,12 @@
+#' Oto-Manguean Inflectional Class Database Language identifiers
+#'
+#' Language identifiers from Oto-Manguean Inflectional Class Database (\url{http://wals.info/}). This dataset is created for \code{\link{oto_mangueanIC.feature}} function.
+#'
+#' #' @format A data frame with 20 rows and 2 variables:
+#' \describe{
+#'   \item{Language.name}{Languaeg names from Oto-Manguean Inflectional Class Database}
+#'   \item{language}{Language names from Glottolog database}
+#' }
+#'
+
+"oto_mangueanIC"
