@@ -298,6 +298,10 @@ colnames(wals)[1] <- "wals.code"
 # 8. abvd data ------------------------------------------------------------
 abvd <- read_tsv("abvd.tsv")
 
+# 9. oto_mangueanIC data --------------------------------------------------
+oto_mangueanIC <- read_csv("oto_mangueanIC.csv")
+
+
 # save files --------------------------------------------------------------
 setwd("/home/agricolamz/work/packages/lingtypology/lingtypology/data/")
 save(glottolog.modified, file="glottolog.modified.RData", compress= 'xz')
@@ -310,6 +314,7 @@ save(ejective_and_n_consonants, file="ejective_and_n_consonants.RData", compress
 save(autotyp, file="autotyp.RData", compress='xz')
 save(wals, file="wals.RData", compress='xz')
 save(abvd, file="abvd.RData", compress='xz')
+save(oto_mangueanIC, file="oto_mangueanIC.RData", compress='xz')
 rm(list = ls())
 
 # remove some files -------------------------------------------------------
