@@ -1,0 +1,21 @@
+Language.name,language
+Chichicapan Zapotec,Chichicapan Zapotec
+Eastern Highland Otomi,Eastern Highland Otomi
+Lealao Chinantec,Lealao Chinantec
+Mezquital Otomi,Mezquital Otomi
+Mitla Zapotec,Mitla Zapotec
+San Juan Colorado Mixtec,San Juan Colorado Mixtec
+San Pedro Amuzgos Amuzgo,San Pedro Amuzgos Amuzgo
+Tepeuxila Cuicatec,Tepeuxila Cuicatec
+Tilapa Otomi,Tilapa Otomi
+Yoloxóchitl Mixtec,Yoloxochitl Mixtec
+Zenzontepec Chatino,Zenzontepec Chatino
+Tlatepuzco Chinantec,Palantla Chinantec
+Malinaltepec Tlapanec,Malinaltepec Me'phaa
+Xochapa Mixtec,Alcozauca Mixtec
+Yaitepec Chatino,Western Highland Chatino
+Chiquihuitlán Mazatec,Chiquihuitlan Mazatec
+Acazulco Otomi,Temoaya Otomi
+Tlahuica,Atzingo Matlatzinca
+Matlatzinca,San Francisco Matlatzinca
+Chichimec,Chichimeca-Jonaz
